tests/src/frontend/syntax/invalid/duplicate_positional_fields.sk
class C(p: Int, p: String) {}

fun main(): void {
  print_raw("Fail")
}
